--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/AICharacters
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Blackboards
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -252,6 +252,8 @@ SequenceBrowser.HiddenColumns=HasParentAsset
 SequenceBrowser.HiddenColumns=AnimNotifyList
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -280,7 +282,7 @@ AnimationAsset="\"Object\" "
 BlendSpace1D="\"Object\" "
 BlendSpace="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" "
+EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -291,10 +293,32 @@ CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
+BehaviorTreeGraphNode_Root="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+BTComposite_Selector="\"Object\" "
+BTCompositeNode="\"Object\" "
+BTNode="\"Object\" "
+BTComposite_Sequence="\"Object\" "
+BTComposite_SimpleParallel="\"Object\" "
+BTTask_MoveTo="\"Object\" "
+BTTask_BlackboardBase="\"Object\" "
+BTTaskNode="\"Object\" "
+BTTask_MoveToRandomLoc_C="\"Object\" "
+BTTask_BlueprintBase="\"Object\" "
+BTTask_Wait="\"Object\" "
+BP_SimpleNPC_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=Behavior Tree
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
@@ -302,8 +326,6 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.213967,B=0.467784,A=1.000000)
@@ -559,17 +581,67 @@ CharacterMovementComponent.Character Movement: Jumping / Falling=True
 CharacterMovementComponent.Character Movement: Walking=True
 CharacterMovementComponent.Sockets=True
 CharacterMovementComponent.Variable=True
+BehaviorTreeGraphNode_Root.AI=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BTComposite_SimpleParallel.Parallel=True
+BTComposite_SimpleParallel.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BTTask_MoveToRandomLoc_C.Task=True
+BTTask_MoveToRandomLoc_C.Description=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+BTTask_MoveToRandomLoc_C.Default=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+RecastNavMesh.TransformCommon=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Collision=True
+RecastNavMesh.HLOD=True
+RecastNavMesh.Physics=True
+RecastNavMesh.Networking=True
+RecastNavMesh.WorldPartition=True
+AIController_PerceptionNPC_C.Tick=True
+AIController_PerceptionNPC_C.AI=True
+AIController_PerceptionNPC_C.ComponentTick=True
+AIController_PerceptionNPC_C.Tags=True
+AIController_PerceptionNPC_C.Replication=True
+AIController_PerceptionNPC_C.ComponentReplication=True
+AIController_PerceptionNPC_C.Activation=True
+AIController_PerceptionNPC_C.Variable=True
+AIController_PerceptionNPC_C.Cooking=True
+AIController_PerceptionNPC_C.Controller=True
+AIController_PerceptionNPC_C.Actor=True
+AIController_PerceptionNPC_C.Input=True
+AIController_PerceptionNPC_C.HLOD=True
+AIController_PerceptionNPC_C.Physics=True
+AIController_PerceptionNPC_C.WorldPartition=True
+AIController_PerceptionNPC_C.Events=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem1=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem4=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem5=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
-MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem7=/Game/Blueprints/AIControllers/AIController_SimpleNPC
-MRUItem8=/Game/Blueprints/AICharacters/BP_SimpleNPC
+MRUItem0=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
+MRUItem1=/Game/Blueprints/AIControllers/AIController_SimpleNPC
+MRUItem2=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
+MRUItem3=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem4=/Game/Blueprints/AICharacters/BP_SimpleNPC
+MRUItem5=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem6=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem10=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
+MRUItem11=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=1
@@ -581,6 +653,9 @@ MRUItem8=/Game/Blueprints/AICharacters/BP_SimpleNPC
 /Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny=1
 /Game/Blueprints/AICharacters/BP_SimpleNPC.BP_SimpleNPC=1
 /Game/Blueprints/AIControllers/AIController_SimpleNPC.AIController_SimpleNPC=1
+/Game/Blueprints/BehaviorTrees/BT_SimpleNPC.BT_SimpleNPC=1
+/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc.BTTask_MoveToRandomLoc=1
+/Game/Blueprints/AIControllers/AIController_PerceptionNPC.AIController_PerceptionNPC=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
@@ -664,7 +739,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
