--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Blackboards
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/AIControllers
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -267,10 +267,10 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.Blackboard\" "
 AssetViewerSettings="\"Object\" "
 EditorParentPlayerListObj="\"Object\" "
 ABP_Quinn_C="\"Object\" "
@@ -310,14 +310,21 @@ BTTask_Wait="\"Object\" "
 BP_SimpleNPC_C="\"Object\" "
 Character="\"Object\" "
 Pawn="\"Object\" "
+AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+K2Node_BreakStruct="\"Object\" "
+K2Node_StructMemberGet="\"Object\" "
+K2Node_StructOperation="\"Object\" "
+K2Node_Variable="\"Object\" "
+K2Node="\"Object\" "
+BlackboardData="\"Object\" \"Object.Blackboard\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
@@ -628,12 +635,30 @@ AIController_PerceptionNPC_C.HLOD=True
 AIController_PerceptionNPC_C.Physics=True
 AIController_PerceptionNPC_C.WorldPartition=True
 AIController_PerceptionNPC_C.Events=True
+AIPerceptionComponent.Variable=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentTick=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.Events=True
+K2Node_BreakStruct.PinOptions=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_VariableGet.Events=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
-MRUItem1=/Game/Blueprints/AIControllers/AIController_SimpleNPC
-MRUItem2=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
-MRUItem3=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem0=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem1=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
+MRUItem2=/Game/Blueprints/AIControllers/AIController_SimpleNPC
+MRUItem3=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
 MRUItem4=/Game/Blueprints/AICharacters/BP_SimpleNPC
 MRUItem5=/Game/Characters/Mannequins/Animations/ABP_Manny
 MRUItem6=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
@@ -656,6 +681,7 @@ MRUItem11=/Game/Characters/Mannequins/Animations/ABP_Quinn
 /Game/Blueprints/BehaviorTrees/BT_SimpleNPC.BT_SimpleNPC=1
 /Game/Blueprints/AITasks/BTTask_MoveToRandomLoc.BTTask_MoveToRandomLoc=1
 /Game/Blueprints/AIControllers/AIController_PerceptionNPC.AIController_PerceptionNPC=1
+/Game/Blueprints/Blackboards/BB_SimpleNPC.BB_SimpleNPC=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
@@ -739,7 +765,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
