--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/AIControllers
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/BehaviorTrees
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -267,10 +267,10 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+ActorComponent="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.Blackboard\" "
+DataAsset="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
 AssetViewerSettings="\"Object\" "
 EditorParentPlayerListObj="\"Object\" "
 ABP_Quinn_C="\"Object\" "
@@ -316,13 +316,20 @@ K2Node_StructMemberGet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
-BlackboardData="\"Object\" \"Object.Blackboard\" "
+BlackboardData="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
+BTDecorator_Blackboard="\"Object\" "
+BTDecorator_BlackboardBase="\"Object\" "
+BTDecorator="\"Object\" "
+BTAuxiliaryNode="\"Object\" "
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=Behavior Tree
+RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -653,20 +660,35 @@ K2Node_FunctionResult.Outputs=True
 K2Node_VariableGet.Events=True
 BlackboardData.Parent=True
 BlackboardData.Key=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
-MRUItem1=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
-MRUItem2=/Game/Blueprints/AIControllers/AIController_SimpleNPC
-MRUItem3=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
-MRUItem4=/Game/Blueprints/AICharacters/BP_SimpleNPC
-MRUItem5=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem6=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem10=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
-MRUItem11=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem0=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
+MRUItem1=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem2=/Game/Blueprints/Blackboards/BB_SimpleNPC
+MRUItem3=/Game/Blueprints/AICharacters/BP_SimpleNPC
+MRUItem4=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
+MRUItem5=/Game/Blueprints/AIControllers/AIController_SimpleNPC
+MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem7=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem10=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem11=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
+MRUItem12=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=1
@@ -765,7 +787,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1284.800 Y=724.800
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
