--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/BehaviorTrees
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Actors
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -307,10 +307,10 @@ BTTaskNode="\"Object\" "
 BTTask_MoveToRandomLoc_C="\"Object\" "
 BTTask_BlueprintBase="\"Object\" "
 BTTask_Wait="\"Object\" "
-BP_SimpleNPC_C="\"Object\" "
-Character="\"Object\" "
-Pawn="\"Object\" "
-AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+BP_SimpleNPC_C="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
@@ -323,23 +323,41 @@ BTDecorator="\"Object\" "
 BTAuxiliaryNode="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
+BTDecorator_Cooldown="\"Object\" "
+BTTask_PlayAnimation="\"Object\" "
+BTDecorator_Loop="\"Object\" "
+BTDecorator_CheckScale_C="\"Object\" "
+BTDecorator_BlueprintBase="\"Object\" "
+BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BTDecorator_CheckGameplayTagsOnActor="\"Object\" "
+StaticMeshComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=Behavior Tree
+RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
+OpenAssetsAtExit=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC.BT_SimpleNPC
+OpenAssetsAtExit=/Game/Blueprints/Blackboards/BB_SimpleNPC.BB_SimpleNPC
+OpenAssetsAtExit=/Game/Blueprints/Decorators/BTDecorator_CheckScale.BTDecorator_CheckScale
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc.BTTask_MoveToRandomLoc
+OpenAssetsAtExit=/Game/Blueprints/AIControllers/AIController_PerceptionNPC.AIController_PerceptionNPC
+OpenAssetsAtExit=/Game/Blueprints/Actors/BP_Semaforo.BP_Semaforo
+OpenAssetsAtExit=/Game/Blueprints/AICharacters/BP_SimpleNPC.BP_SimpleNPC
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.213967,B=0.467784,A=1.000000)
@@ -349,6 +367,7 @@ RecentAssetEditors=AnimationBlueprintEditor
 /Game/Blueprints/AITasks=(R=0.467784,G=0.170844,B=0.000000,A=1.000000)
 /Game/Blueprints/AICharacters=(R=0.467784,G=0.342031,B=0.000000,A=1.000000)
 /Game/Blueprints/AIControllers=(R=0.000000,G=0.779694,B=0.895833,A=1.000000)
+/Game/Blueprints/Decorators=(R=0.421955,G=0.467784,B=0.251399,A=1.000000)
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -674,21 +693,73 @@ Blueprint.ClassOptions=True
 Blueprint.BlueprintOptions=True
 Blueprint.Imports=True
 Blueprint.Interfaces=True
+BP_SimpleNPC_C.SkeletalMesh=True
+BP_SimpleNPC_C.Optimization=True
+BP_SimpleNPC_C.LOD=True
+BP_SimpleNPC_C.TextureStreaming=True
+BTDecorator_Cooldown.FlowControl=True
+BTDecorator_Cooldown.Decorator=True
+BTDecorator_Cooldown.Description=True
+BTTask_PlayAnimation.Node=True
+BTTask_PlayAnimation.Task=True
+BTTask_PlayAnimation.Description=True
+BTDecorator_Loop.Decorator=True
+BTDecorator_Loop.Description=True
+BTDecorator_CheckScale_C.FlowControl=True
+BTDecorator_CheckScale_C.Description=True
+BTDecorator_CheckScale_C.Condition=True
+BTDecorator_CheckScale_C.Default=True
+BTDecorator_CheckScale_C.Condition Variables=True
+BTDecorator_CheckGameplayTagsOnActor.GameplayTagCheck=True
+BTDecorator_CheckGameplayTagsOnActor.Condition=True
+BTDecorator_CheckGameplayTagsOnActor.Description=False
+BP_Semaforo_C.Tick=True
+BP_Semaforo_C.Replication=True
+BP_Semaforo_C.Rendering=True
+BP_Semaforo_C.Collision=True
+BP_Semaforo_C.Actor=True
+BP_Semaforo_C.Input=True
+BP_Semaforo_C.HLOD=True
+BP_Semaforo_C.Physics=True
+BP_Semaforo_C.WorldPartition=True
+BP_Semaforo_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BP_Semaforo_C.TransformCommon=True
+BP_Semaforo_C.Networking=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
-MRUItem1=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
-MRUItem2=/Game/Blueprints/Blackboards/BB_SimpleNPC
-MRUItem3=/Game/Blueprints/AICharacters/BP_SimpleNPC
-MRUItem4=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
-MRUItem5=/Game/Blueprints/AIControllers/AIController_SimpleNPC
-MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem7=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem9=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem10=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem11=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
-MRUItem12=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem0=/Game/Blueprints/AICharacters/BP_SimpleNPC
+MRUItem1=/Game/Blueprints/Actors/BP_Semaforo
+MRUItem2=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
+MRUItem3=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Blueprints/Decorators/BTDecorator_CheckScale
+MRUItem6=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem7=/Game/Blueprints/Blackboards/BB_SimpleNPC
+MRUItem8=/Game/Blueprints/AIControllers/AIController_SimpleNPC
+MRUItem9=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem10=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
+MRUItem11=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem12=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem13=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
+MRUItem14=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=1
@@ -769,6 +840,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Actors/BP_Semaforo.BP_Semaforo;
 RecentlyPlaced=/Game/Blueprints/AICharacters/BP_SimpleNPC.BP_SimpleNPC;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 
@@ -787,7 +859,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1884,4 +1956,23 @@ MovieSceneCapture.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailCustomWidgetExpansion]
+BP_SimpleNPC_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+SkeletalMeshComponent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+CapsuleComponent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+StaticMeshActor=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+BP_Semaforo_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+SceneComponent=
+
+[PluginBrowser]
+InstalledPlugins=VisualStudioTools
+InstalledPlugins=BlueprintScreenshotTool
+InstalledPlugins=WMFCodecs
+
+[MessageLog]
+LastLogListing=PIE
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
