--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Actors
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequins/Animations/Manny
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -270,7 +270,7 @@ SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
 EditorParentPlayerListObj="\"Object\" "
 ABP_Quinn_C="\"Object\" "
@@ -310,7 +310,7 @@ BTTask_Wait="\"Object\" "
 BP_SimpleNPC_C="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense.DetectionByAffiliation\" "
 K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
@@ -331,33 +331,28 @@ BTDecorator_BlueprintBase="\"Object\" "
 BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BTDecorator_CheckGameplayTagsOnActor="\"Object\" "
 StaticMeshComponent="\"Object\" "
+BTTask_ClearBlackboardValue_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationBlueprintEditor
-OpenAssetsAtExit=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC.BT_SimpleNPC
-OpenAssetsAtExit=/Game/Blueprints/Blackboards/BB_SimpleNPC.BB_SimpleNPC
-OpenAssetsAtExit=/Game/Blueprints/Decorators/BTDecorator_CheckScale.BTDecorator_CheckScale
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc.BTTask_MoveToRandomLoc
-OpenAssetsAtExit=/Game/Blueprints/AIControllers/AIController_PerceptionNPC.AIController_PerceptionNPC
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_Semaforo.BP_Semaforo
-OpenAssetsAtExit=/Game/Blueprints/AICharacters/BP_SimpleNPC.BP_SimpleNPC
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.213967,B=0.467784,A=1.000000)
@@ -743,23 +738,29 @@ StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
 BP_Semaforo_C.TransformCommon=True
 BP_Semaforo_C.Networking=True
+AIController_PerceptionNPC_C.Default=True
+BTTask_ClearBlackboardValue_C.Task=True
+BTTask_ClearBlackboardValue_C.Description=True
+BTTask_ClearBlackboardValue_C.Default=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/AICharacters/BP_SimpleNPC
-MRUItem1=/Game/Blueprints/Actors/BP_Semaforo
-MRUItem2=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
-MRUItem3=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem5=/Game/Blueprints/Decorators/BTDecorator_CheckScale
-MRUItem6=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
-MRUItem7=/Game/Blueprints/Blackboards/BB_SimpleNPC
-MRUItem8=/Game/Blueprints/AIControllers/AIController_SimpleNPC
-MRUItem9=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem10=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
-MRUItem11=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem12=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem13=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
-MRUItem14=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem0=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
+MRUItem1=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem2=/Game/Characters/Mannequins/Animations/Manny/MM_Land
+MRUItem3=/Game/Blueprints/AITasks/BTTask_ClearBlackboardValue
+MRUItem4=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem5=/Game/Blueprints/AICharacters/BP_SimpleNPC
+MRUItem6=/Game/Blueprints/Actors/BP_Semaforo
+MRUItem7=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/Blueprints/Decorators/BTDecorator_CheckScale
+MRUItem10=/Game/Blueprints/Blackboards/BB_SimpleNPC
+MRUItem11=/Game/Blueprints/AIControllers/AIController_SimpleNPC
+MRUItem12=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
+MRUItem13=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem14=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem15=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
+MRUItem16=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=1
@@ -775,6 +776,9 @@ MRUItem14=/Game/Characters/Mannequins/Animations/ABP_Quinn
 /Game/Blueprints/AITasks/BTTask_MoveToRandomLoc.BTTask_MoveToRandomLoc=1
 /Game/Blueprints/AIControllers/AIController_PerceptionNPC.AIController_PerceptionNPC=1
 /Game/Blueprints/Blackboards/BB_SimpleNPC.BB_SimpleNPC=1
+/Game/Blueprints/Decorators/BTDecorator_CheckScale.BTDecorator_CheckScale=1
+/Game/Blueprints/Actors/BP_Semaforo.BP_Semaforo=1
+/Game/Characters/Mannequins/Animations/Manny/MM_Land.MM_Land=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
@@ -858,8 +862,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1288.000 Y=728.000
+ScreenPosition=X=320.000 Y=151.200
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
