--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -334,7 +334,7 @@ StaticMeshComponent="\"Object\" "
 BTTask_ClearBlackboardValue_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -863,7 +863,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=151.200
-WindowSize=X=1289.600 Y=729.600
+WindowSize=X=1291.200 Y=731.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1964,7 +1964,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 [DetailCustomWidgetExpansion]
 BP_SimpleNPC_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 SkeletalMeshComponent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
-CapsuleComponent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+CapsuleComponent=
 StaticMeshActor=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 BP_Semaforo_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 SceneComponent=
